# Louvre

./: .gitignore  CHANGES  LICENSE  README.md  meson.build
src/: LouvreProject.pro  meson.build  meson_options.txt
src/CZ/Louvre/: CZLouvreVersion.h.in  LActivationToken.cpp  LActivationToken.h  LActivationTokenManager.cpp  LActivationTokenManager.h  LAnimation.cpp  LAnimation.h  LBackgroundBlur.cpp  LBackgroundBlur.h  LBox.h  LClient.cpp  LClient.h  LClientCursor.cpp  LClientCursor.h  LClipboard.cpp  LClipboard.h  LColor.h  LCompositor.cpp  LCompositor.h  LCursor.cpp  LCursor.h  LDMAFeedback.cpp  LDMAFeedback.h  LDND.cpp  LDND.h  LDNDSession.h  LEdge.cpp  LEdge.h  LExclusiveZone.cpp  LExclusiveZone.h  LFactoryObject.cpp  LFactoryObject.h  LFramebuffer.h  LFramebufferWrapper.h  LGPU.cpp  LGPU.h  LGammaTable.cpp  LGammaTable.h  LGlobal.cpp  LGlobal.h  (+58 more)
src/CZ/Louvre/Backends/: LBackend.cpp  LBackend.h  LBackendOutput.h
src/CZ/Louvre/Cursor/: LCursor.cpp  LCursor.h  LCursorSource.cpp  LCursorSource.h  LImageCursorSource.h  LRoleCursorSource.cpp  LRoleCursorSource.h  LShapeCursorSource.cpp  LShapeCursorSource.h
src/CZ/Louvre/Events/: LEvent.cpp  LEvent.h  LInputEvent.cpp  LInputEvent.h  LKeyboardEnterEvent.h  LKeyboardEvent.h  LKeyboardKeyEvent.cpp  LKeyboardKeyEvent.h  LKeyboardLeaveEvent.h  LKeyboardModifiersEvent.h  LPointerButtonEvent.cpp  LPointerButtonEvent.h  LPointerEnterEvent.h  LPointerEvent.h  LPointerHoldBeginEvent.cpp  LPointerHoldBeginEvent.h  LPointerHoldEndEvent.cpp  LPointerHoldEndEvent.h  LPointerLeaveEvent.h  LPointerMoveEvent.cpp  LPointerMoveEvent.h  LPointerPinchBeginEvent.cpp  LPointerPinchBeginEvent.h  LPointerPinchEndEvent.cpp  LPointerPinchEndEvent.h  LPointerPinchUpdateEvent.cpp  LPointerPinchUpdateEvent.h  LPointerScrollEvent.cpp  LPointerScrollEvent.h  LPointerSwipeBeginEvent.cpp  LPointerSwipeBeginEvent.h  LPointerSwipeEndEvent.cpp  LPointerSwipeEndEvent.h  LPointerSwipeUpdateEvent.cpp  LPointerSwipeUpdateEvent.h  LSurfaceCommitEvent.h  LSurfaceUnlockEvent.h  LTouchCancelEvent.cpp  LTouchCancelEvent.h  LTouchDownEvent.cpp  (+9 more)
src/CZ/Louvre/Layout/: LExclusiveZone.cpp  LExclusiveZone.h  LSurfaceLayer.h
src/CZ/Louvre/Manager/: LActivationToken.cpp  LActivationToken.h  LActivationTokenManager.cpp  LActivationTokenManager.h  LSessionLockManager.cpp  LSessionLockManager.h
src/CZ/default/: LActivationTokenManagerDefault.cpp  LBackgroundBlurDefault.cpp  LClientDefault.cpp  LClipboardDefault.cpp  LCompositorDefault.cpp  LCursorRoleDefault.cpp  LDNDDefault.cpp  LDNDIconRoleDefault.cpp  LForeignToplevelControllerDefault.cpp  LKeyboardDefault.cpp  LLayerRoleDefault.cpp  LOutputDefault.cpp  LPointerDefault.cpp  LPopupRoleDefault.cpp  LSeatDefault.cpp  LSessionLockManagerDefault.cpp  LSessionLockRoleDefault.cpp  LSubsurfaceRoleDefault.cpp  LSurfaceDefault.cpp  LToplevelRoleDefault.cpp  LTouchDefault.cpp
src/backends/: LBackends.pro
src/backends/graphic/: LGraphicBackend.h
src/backends/input/: LInputBackend.h
src/benchmark/: README.md
src/benchmark/LBenchmark/: LBenchmark.pro  main.c  meson.build  shm.c  xdg-shell-client-protocol.h  xdg-shell-protocol.c
src/benchmark/graphs/: Graphs.ipynb
src/examples/: Examples.pri  Examples.pro  meson.build
src/examples/Minimal/: Compositor.cpp  Compositor.h  Minimal.pro  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Surface.cpp  Surface.h  main.cpp  meson.build
src/examples/Region/: Compositor.cpp  Compositor.h  Output.cpp  Output.h  Region.pro  main.cpp  meson.build
src/examples/common/: TextRenderer.cpp  TextRenderer.h
src/examples/cz-louvre-default/: main.cpp  meson.build
src/examples/louvre-default/: louvre-default.pro  main.cpp  meson.build
src/examples/louvre-views/: Compositor.cpp  Compositor.h  Dock.cpp  Dock.h  DockItem.cpp  Global.cpp  Global.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Shared.cpp  Shared.h  Surface.cpp  Surface.h  Toplevel.cpp  Toplevel.h  ToplevelTopbar.cpp  ToplevelTopbar.h  ToplevelTopbarButton.cpp  ToplevelTopbarButton.h  ToplevelView.cpp  ToplevelView.h  apps.list.in  main.cpp  meson.build
src/examples/louvre-weston-clone/: Clock.cpp  Clock.h  Compositor.cpp  Compositor.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Popup.cpp  Popup.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  TerminalIcon.cpp  TerminalIcon.h  ToplevelRole.cpp  ToplevelRole.h  louvre-weston-clone.pro  main.cpp  meson.build
src/lib/: Louvre.pro
src/lib/classes/: LBaseSurfaceRole.cpp  LBaseSurfaceRole.h  LClient.cpp  LClient.h  LCompositor.cpp  LCompositor.h  LCursor.cpp  LCursorRole.cpp  LDNDIconRole.cpp  LDNDManager.h  LDataDevice.cpp  LDataDevice.h  LDataOffer.h  LDataSource.cpp  LKeyboard.cpp  LKeyboard.h  LLog.cpp  LNamespaces.h  LOpenGL.cpp  LOutput.cpp  LOutput.h  LPainter.cpp  LPoint.h  LPointer.cpp  LPointer.h  LPopupRole.cpp  LPopupRole.h  LPositioner.cpp  LPositioner.h  LRect.h  LRegion.cpp  LRegion.h  LSeat.cpp  LSubsurfaceRole.cpp  LSubsurfaceRole.h  LSurface.cpp  LSurface.h  LTime.cpp  LTime.h  LToplevelRole.cpp  (+3 more)
src/lib/core/: LActivationToken.cpp  LActivationToken.h  LActivationTokenManager.cpp  LActivationTokenManager.h  LAnimation.cpp  LAnimation.h  LBackgroundBlur.cpp  LBackgroundBlur.h  LBaseSurfaceRole.cpp  LBaseSurfaceRole.h  LBitfield.h  LBitset.h  LBox.cpp  LBox.h  LClient.cpp  LClient.h  LClientCursor.cpp  LClientCursor.h  LClipboard.cpp  LClipboard.h  LColor.h  LCompositor.cpp  LCompositor.h  LConfig.h.in  LConfiguration.h.in  LContentType.h  LCursor.cpp  LCursor.h  LCursorRole.cpp  LCursorRole.h  LDND.cpp  LDND.h  LDNDIconRole.cpp  LDNDIconRole.h  LDNDManager.cpp  LDNDManager.h  LDNDSession.h  LDataDevice.cpp  LDataDevice.h  LDataOffer.cpp  (+171 more)
src/lib/other/: cursor.cpp  cursor.h  lodepng.cpp  stb_image.h  stb_image_write.h
src/lib/protocols/: linux-dmabuf-unstable-v1.xml  scanner.sh
src/tests/: LBitset_tests.h  LObject_test.h  LRegion_test.h  LTest.cpp  LTest.h  LWeak_test.h  main.cpp  meson.build
src/tests/formats/: main.cpp  meson.build
src/tests/utils/: LBitset_tests.h  LObject_test.h  LRegion_test.h  LTest.cpp  LTest.h  LWeak_test.h  main.cpp  meson.build
(+3393 files in other folders)
