option('build_examples', 
    type : 'boolean', 
    value : true)

option('build_tests', 
    type : 'boolean', 
    value : false)

option('backend-drm',
	type: 'boolean',
	value: true,
	description: 'DRM graphic backend')

option('backend-wayland-graphic',
	type: 'boolean',
	value: true,
	description: 'Wayland graphic backend')

option('backend-libinput',
	type: 'boolean',
	value: true,
	description: 'Libinput backend')

option('backend-wayland-input',
	type: 'boolean',
	value: true,
	description: 'Wayland input backend')

option('default_graphic_backend', 
    type : 'combo', 
    choices : ['drm', 'wayland'],
    value : 'drm')

option('default_input_backend', 
    type : 'combo', 
    choices : ['libinput', 'wayland'],
    value : 'libinput')
